# Image-Filtering-with-Multi-Channel-Kernel

./: CMakeLists.txt  README.md  README.txt  main.cpp  with_opencv.cpp  without_opencv.cpp
